working on custom fields
Former-commit-id: 784d6823feb081c150443f309de6f9ba03833e24 [formerly 856c68d3d43047539d3055715719edbd3a6e2778] [formerly 8bd6ac82a1cdb3720c2437bc2247aff40e9c11a5 [formerly cf24b82d0e3cc824391cad999ecf9f1a5e9ca73d]]
Former-commit-id: 920a2c5e58a0243b2776ff97e4ed48da868291ce [formerly 64e94b0210bec17e37920fac0175dc3e93396039]
Former-commit-id: 1cd71add495c8657e0e4cf7bfe0bbb0dfda30ad2

--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -1174,9 +1174,8 @@
     var cw = $('#card_0').width();
     console.log(cw);
     console.log('triggered from account');
-    if (cw==0 && localStorage['accountShow']!='list') {
+    if ((cw==null ||cw==0) && localStorage['accountShow']!='list') {
        /*cw=210;*/
-
         setTimeout(function(){
          $('#card_0').trigger( "resize" ); 
         },100);
