Regional settings fixes
Former-commit-id: 937c63c47cf8d2cbd33cdcdac769c8fc6a9adfc3 [formerly a3c56f6c671addc8226c60cbda6666ddc39b6a04] [formerly 67ace69d740dc48d6e17372ed058dc96c6125b12 [formerly 5270fcc552aadd044decccbaaae632d42b542b37]]
Former-commit-id: e475ba3b5404ca2a9939bd6d44dcd54500821f5c [formerly 7849394924d9902f8d6d2ea06e651ad615d8095d]
Former-commit-id: b5a12aa26b117032cea708d664825b1f85ac7bb6

--- a/templates/admin/opportunity/opportunity_edit.html
+++ b/templates/admin/opportunity/opportunity_edit.html
@@ -88,7 +88,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                 <h3>{{_("New Opportunity Stage")}}</h3>
             </div>
-            <form name="addOppStage" class="form-horizontal">
+            <!--<form name="addOppStage" class="form-horizontal">-->
                 <div class="modal-body">
                     <fieldset>
                         <div class="form-group">
@@ -103,7 +103,7 @@
                         stage")}}
                     </button>
                 </div>
-            </form>
+            <!--</form>-->
         </div>
     </div>
 </div>
@@ -116,7 +116,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                 <h3>{{_("Edit Opportunity Stage")}}</h3>
             </div>
-            <form name="addOppStage" class="form-horizontal">
+            <!--<form name="addOppStage" class="form-horizontal">-->
                 <div class="modal-body">
                     <fieldset>
                         <div class="form-group">
@@ -131,7 +131,7 @@
                     <button type="submit" class="btn green" ng-click="updateOppStage(oppstageedit)">{{_("save")}}
                     </button>
                 </div>
-            </form>
+            <!--</form>-->
         </div>
     </div>
 </div>
