fixing 2 clicks to update oppo price Fix ##2263
Former-commit-id: 013c1906e3872a1f655bf23287d24d4a76b1d578 [formerly 67c055eb186c899e67e16cecad2e59ebe47cef43] [formerly 040ac0a98442bad111bcf999a78c88b0be0fd283 [formerly 2530865e828b5dd1fe5543929f0c3a8f3789b069]]
Former-commit-id: 573e5c753ff081f3b285ffcc19f44852be1aa4b4 [formerly ebaf01a7baa440624d6856bf9824c010ffdeb8f5]
Former-commit-id: 5875ee305c5d437e67cc4d5493e923aa80a19e9f

--- a/templates/opportunities/opportunity_show.html
+++ b/templates/opportunities/opportunity_show.html
@@ -208,10 +208,10 @@
                   </p>
                   <div  style="padding-right: 0px;  margin-bottom: 0px !important;" class="form-group currencyForm" ng-show="showEdit">
                     <div class="col-md-3 margin-bottom-10" style="padding-left:0px">
-                        <input type="text" required id="id_name" class="form-control" placeholder="{{_('Opportunity amount...')}}" ng-model="opportunity.amount_per_unit ">
+                        <input type="text" required id="id_name" class="form-control" placeholder="{{_('Opportunity amount...')}}" ng-model="opportunity.amount_per_unit " ng-blur="updateOpportunityPrice()">
                      </div>
                     <div class="col-md-3 margin-bottom-10">
-                     <select  class="form-control" ng-model="opportunity.currency">
+                     <select  class="form-control" ng-model="opportunity.currency" ng-change="updateOpportunityPrice()">
                       <option value="USD" selected>$ - USD</option>
                       <option value="EUR">€ - EUR</option>
                       <option value="CAD">$ - CAD</option>
@@ -287,7 +287,7 @@
                     </select>
                     </div>
                       <div class="col-md-3 margin-bottom-10">
-                          <select   ng-click="showPriceForm=true" class="form-control" ng-model="opportunity.duration_unit">
+                          <select   ng-click="showPriceForm=true" class="form-control" ng-model="opportunity.duration_unit" ng-change="updateOpportunityPrice()">
                               <option value="fixed">{{ _('Fixed bid')}}</option>
                               <option value="hour">{{ _('Per hour')}}</option>
                               <option value="month">{{ _('Per month')}}</option>
@@ -295,15 +295,15 @@
                           </select>
                       </div>
                       <div ng-hide="opportunity.duration_unit=='fixed'" class="col-md-3 margin-bottom-10">
-                         <input ng-click="showPriceForm=true"  type="text" pattern="\d*"  required id="" class="form-control" ng-model="opportunity.duration">
+                         <input ng-click="showPriceForm=true"  type="text" pattern="\d*"  required id="" class="form-control" ng-model="opportunity.duration" ng-blur="updateOpportunityPrice()">
                       </div>
-                      <div class="col-md-3 margin-bottom-10">
+                      <!-- <div class="col-md-3 margin-bottom-10">
                         <div class="">
                          <button class="btn blue btn-sm" ng-click="updateOpportunityPrice()" style="  height: 34px;">{{_("Ok")}}</button>
                          <button class="btn btn-sm" ng-click="showPriceForm=falsee" style="height: 34px;">{{_("Cancel")}}</button>
                         </div>
 
-                      </div>
+                      </div> -->
                       <div class="clearfix"></div>
                   </div>
                   <p style="font-size: 13px;color: gray;padding-right: 15px;">
@@ -989,10 +989,10 @@
                            <div class="oppPrice col-md-7 ">
                             <div class="form-group currencyForm" ng-show="showPriceForm">
                               <div class="col-md-12 margin-bottom-10">
-                                  <input type="text" required id="id_name" class="form-control" placeholder="{{_('Opportunity amount...')}}" ng-model="opportunity.amount_per_unit ">
+                                  <input type="text" required id="id_name" class="form-control" placeholder="{{_('Opportunity amount...')}}" ng-model="opportunity.amount_per_unit " ng-blur="updateOpportunityPrice()">
                                </div>
                               <div class="col-md-12 margin-bottom-10">
-                               <select  class="form-control" ng-model="opportunity.currency">
+                               <select  class="form-control" ng-model="opportunity.currency" ng-change="updateOpportunityPrice()">
                                 <option value="USD" selected>$ - USD</option>
                                 <option value="EUR">€ - EUR</option>
                                 <option value="CAD">$ - CAD</option>
