fixing rezie problem after changing view where selecting all cards
Former-commit-id: c606208f7eb05c7a488f8acfa1ad6652102cc631 [formerly 08fdd3d518606e79c370935960cfd930e8bb5c1c] [formerly a8b0945d77d98f841fbc045769072f8273820103 [formerly 84e5d493801ac280094b2db5b1b1bc569a26ecd9]]
Former-commit-id: e2dea2a5f401fff46be6f831ddea85cde22cadbd [formerly 27c3478d2cc780fe995335f14753f481ce61207c]
Former-commit-id: 8690ea83a1eff9aea8b466259df201d3512fd0b1

--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -1263,7 +1263,7 @@
       var cw = $('#card_0').width();
       console.log('triggered from contact');
       console.log(cw);
-      if ((cw==null ||cw==0) && localStorage['contactShow']!='list') {
+      if ((cw==null ||cw <=0) && localStorage['contactShow']!='list') {
           setTimeout(function(){
            $('#card_0').trigger( "resize" ); 
           },100);       
