--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -1174,7 +1174,7 @@
     var cw = $('#card_0').width();
     console.log(cw);
     console.log('triggered from account');
-    if ((cw==null ||cw==0) && localStorage['accountShow']!='list') {
+    if ((cw==null ||cw <=0) && localStorage['accountShow']!='list') {
        /*cw=210;*/
         setTimeout(function(){
          $('#card_0').trigger( "resize" ); 
