Finishing Track event in Lead
Former-commit-id: 4d62a0ccc2d0fddbb01b0b9f53a512835412e9aa [formerly 9d45ad890cd01765de728a5e4899209f8025c04c] [formerly 8cc56184ac9fc4c695cec0efc1a8c467306977ef [formerly 71e0aa222b349b37160d5b9555c0701003add343]]
Former-commit-id: 34beb18f9a21621346d02323fd17f1212ab8e414 [formerly 34d610b456fa474a661638a1f07a88476933348e]
Former-commit-id: 631f8954beedb691f602cfdd6de9adc17d309df1

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,9 +7,9 @@
 <!-- BEGIN HEAD -->
 <head>
 
-    <!-- start Mixpanel --><script type="text/javascript">(function(e,b){if(!b.__SV){var a,f,i,g;window.mixpanel=b;b._i=[];b.init=function(a,e,d){function f(b,h){var a=h.split(".");2==a.length&&(b=b[a[0]],h=a[1]);b[h]=function(){b.push([h].concat(Array.prototype.slice.call(arguments,0)))}}var c=b;"undefined"!==typeof d?c=b[d]=[]:d="mixpanel";c.people=c.people||[];c.toString=function(b){var a="mixpanel";"mixpanel"!==d&&(a+="."+d);b||(a+=" (stub)");return a};c.people.toString=function(){return c.toString(1)+".people (stub)"};i="disable time_event track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.set_once people.increment people.append people.union people.track_charge people.clear_charges people.delete_user".split(" ");
+   <!-- start Mixpanel --><script type="text/javascript">(function(e,b){if(!b.__SV){var a,f,i,g;window.mixpanel=b;b._i=[];b.init=function(a,e,d){function f(b,h){var a=h.split(".");2==a.length&&(b=b[a[0]],h=a[1]);b[h]=function(){b.push([h].concat(Array.prototype.slice.call(arguments,0)))}}var c=b;"undefined"!==typeof d?c=b[d]=[]:d="mixpanel";c.people=c.people||[];c.toString=function(b){var a="mixpanel";"mixpanel"!==d&&(a+="."+d);b||(a+=" (stub)");return a};c.people.toString=function(){return c.toString(1)+".people (stub)"};i="disable time_event track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.set_once people.increment people.append people.union people.track_charge people.clear_charges people.delete_user".split(" ");
 for(g=0;g<i.length;g++)f(c,i[g]);b._i.push([a,e,d])};b.__SV=1.2;a=e.createElement("script");a.type="text/javascript";a.async=!0;a.src="undefined"!==typeof MIXPANEL_CUSTOM_LIB_URL?MIXPANEL_CUSTOM_LIB_URL:"file:"===e.location.protocol&&"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js".match(/^\/\//)?"https://cdn.mxpnl.com/libs/mixpanel-2-latest.min.js":"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js";f=e.getElementsByTagName("script")[0];f.parentNode.insertBefore(a,f)}})(document,window.mixpanel||[]);
-mixpanel.init("c36aa57ab10237c2b1c3d4d9c5f751bc");</script><!-- end Mixpanel -->
+mixpanel.init("793d188e5019dfa586692fc3b312e5d1");</script><!-- end Mixpanel -->
     <meta charset="utf-8"/>
     <meta http-equiv="content-language" content="en">
     <title>i/oGrow Engine Platform</title>
@@ -401,6 +401,10 @@ mixpanel.init("c36aa57ab10237c2b1c3d4d9c5f751bc");</script><!-- end Mixpanel -->
 <input type="hidden" id="user_suspended" value="{{ user_suspended }}"/>
 <input type="hidden" id="active_app" value="{{ active_app.key.id() }}"/>
 <input type="hidden" value="{{ user.emailSignature |e }}" id="signature"/>
+<input type="hidden" id="userDisplayname" value="{{ user.google_display_name }}">
+<input type="hidden" id="usercreated_at" value="{{ user.created_at }}">
+<input type="hidden" id="userorganization" value="{{organization_name}}">
+<input type="hidden" id="userLanguage" value="{{ user.language }}">
 
 <!--</div>-->
 <div class="clearfix"></div>
